basic structure of boards and categories and tasks is now there. still need to align buttons and fix alignment of categories and tasks (they are vertical at the moment)

--- a/src/App.css
+++ b/src/App.css
@@ -45,4 +45,11 @@ button {
 .board {
   border-bottom: 2px solid #38ab3e;
   min-height: 600px;
+  flex: 1;
+}
+
+.sidePanel {
+  min-width: 200px;
+  border-right: 2px solid #ccc;
+  padding-right: 20px;
 }
